kubernetes/overlays/mantis/elasticsearch-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
spec:
  volumeClaimTemplates:
    - metadata:
        name: es-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
        storageClassName: "hawkeye-storage-policy"
