kubernetes/overlays/mantis/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookstore-route
spec:
  hostnames:
    - bookstore-mantis.lab.worker-node.com
